--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,7 @@ img{
 .footer-socialmedia{
     display: block;
    max-width: 208px;
+   margin-right: 80px;
 }
 
 .footer-socialmedia-text{
@@ -483,4 +484,79 @@ img{
 
 .footer-socialmedia-icon{
     fill: #f4f4fd;
+}
+
+.footer-subscribe{
+    display: block;
+    max-width: 453px;
+}
+
+.footer-subscribe-text{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-subscribe-form{
+    display: flex;
+    gap: 24px;
+}
+
+.footer-subscribe-label{}
+
+.footer-subscribe-input{
+    background-color: inherit;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 264px;
+    height: 40px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+
+.footer-subscribe-input::placeholder{
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #fff;
+}
+.footer-suscribe-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-width: 165px;
+    height: 40px;
+    padding-left: 24px;
+    padding-right: 24px;
+    border-radius: 4px;
+    padding: 8px 24px;
+    background-color: #4d5ae5;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    text-align: center;
+    color: #fff;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-suscribe-btn:hover{
+    background-color: #404bbf;
+}
+
+.footer-suscribe-btn:focus{
+    background-color: #404bbf;
+}
+
+.footer-subsribe-icon{
+    fill: #fff;
+    margin-left: 16px;
 }
