--- a/css/styles.css
+++ b/css/styles.css
@@ -569,9 +569,17 @@ img{
     width: 100%;
     height: 100%;
     z-index: 999;
- 
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
 }
 
+
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
 
 .modal{
     position: absolute;
@@ -584,7 +592,9 @@ img{
     max-width: 408px;
     min-height: 584px;
     padding: 72px 24px 24px 24px;
+
 }
+
 
 .modal-close-btn{
     display: flex;
