--- a/css/styles.css
+++ b/css/styles.css
@@ -535,6 +535,7 @@ img{
     height: 40px;
     padding-left: 24px;
     padding-right: 24px;
+    border: none;
     border-radius: 4px;
     padding: 8px 24px;
     background-color: #4d5ae5;
@@ -572,6 +573,8 @@ img{
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -589,9 +592,10 @@ img{
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
     border-radius: 4px;
-    max-width: 408px;
+    width: 408px;
     min-height: 584px;
     padding: 72px 24px 24px 24px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -609,7 +613,7 @@ img{
     border: 1px solid rgba(0, 0, 0, 0.1);
     border-radius: 50%;
     background-color: #e7e9fc;
-    transition: background-color 250 ms cubic-bezier(0.4, 0, 0.2, 1),border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .modal-close-btn:hover {
@@ -624,7 +628,7 @@ img{
 
 .modal-close-icon {
     fill: #2e2f42;
-    transition: fill 250 ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-btn:hover .modal-close-icon {
@@ -707,7 +711,11 @@ img{
     width: 100%;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    padding: 8px px 16px 8px 16px;
+    padding: 8px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
     background-color: transparent;
     outline: transparent;
     resize: none;
@@ -725,7 +733,7 @@ img{
 }    
 
 .form-checkbox-container{
-    margin-bottom: 16px;
+    margin-bottom: 24px;
 }
 
 .form-checkbox{
